Ensure correct name of class is in vsftpInterface json definition.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
@@ -1,2 +1,11 @@
 vsftpInterface.name=VSFTP Interface
 vsftpInterface.names=VSFTP Interfaces
+
+name.name=Interface Name
+name.desc=The name of this interface.
+
+addressToBind.name=Listening Address
+addressToBind.desc=The IP address on which this interface will listen for incoming connections.
+
+portToBind.name=Listening Port
+portToBind.desc=The port on which this interface will listen for incoming connections.
