Moved upload to a widget. Moved tree page to plugin.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -51,3 +51,5 @@ username.desc=The username required to access this resource.
 
 password.name=Password
 password.desc=The password required to access this resource.
+
+browseFiles.name=Browse Files
