Separated file uploads from browsing.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -3,6 +3,9 @@
 virtualFolder.name=Virtual Folder
 virtualFolder.names=Virtual Folders
 
+uploadFiles.names=Upload Files
+uploadFiles.name=Upload File
+
 create.name=Mount
 
 name.name=Name
