WIP on setup wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -6,6 +6,9 @@ virtualFolder.names=Virtual Folders
 uploadFiles.names=Upload Files
 uploadFiles.name=Upload File
 
+localFolder.name=Local Folder
+localFolder.names=Local Folders
+
 create.name=Mount
 
 name.name=Name
