Further work on setup wizard, but still WIP.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -17,8 +17,8 @@ name.desc=The name to identify this mount when using this system.
 home.name=Home
 home.desc=This is the home mount for this tenant
 
-destinationUri.name=Path/URI
-destinationUri.desc=The path or URI that will serve as the source for this virtual folder.
+destinationUri.name=Path
+destinationUri.desc=The path of the file.
 
 
 shortCode.name=Short Code
@@ -58,4 +58,18 @@ username.desc=The username required to access this resource.
 password.name=Password
 password.desc=The password required to access this resource.
 
+privateKey.name=Private Key
+privateKey.desc=The private key for SSH key authentication.
+
+passphrase.name=Passphrase
+passphrase.desc=The passphrase for the private key.
+
 browseFiles.name=Browse Files
+
+hostname.name=Hostname
+hostname.desc=The hostname of the file server.
+
+port.name=Port
+port.desc=The port of the file server.
+
+port.invalid=The port number should be between 1 and 65535.
