Setup working. i18n fixed. Added folder paths for various mounts.

--- a/jadaptive-virtual-sftp-gcs/src/main/resources/i18n/googleFolder.properties
+++ b/jadaptive-virtual-sftp-gcs/src/main/resources/i18n/googleFolder.properties
@@ -1,1 +1,17 @@
-googleFolder.name=Google Compute Storage
+googleFolder.name=Google Cloud Storage
+googleFolder.names=Google Cloud Storage
+
+name.name=Name
+name.desc=The name to identify this mount when using this system.
+
+mountPath.name=Mount Path
+mountPath.desc=The path on which this folder is mounted within the virtual file system.
+
+clientJson.name=Client JSON
+clientJson.desc=The JSON content used as security credentials for this resource.
+
+bucket.name=Bucket
+bucket.desc=The bucket you want to access resources on.
+
+filePath.name=Path
+filePath.desc=The path within the bucket.
