--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -1,1 +1,20 @@
 s3Folder.name=S3 Bucket
+s3Folder.names=S3 Buckets
+
+name.name=Name
+name.desc=The name to identify this mount when using this system.
+
+mountPath.name=Mount Path
+mountPath.desc=The path on which this folder is mounted within the virtual file system.
+
+accessKey.name=Access Key
+accessKey.desc=The AWS access key for accessing this resource.
+
+secretKey.name=Secret Key
+secretKey.desc=The SAWS secret key for accessing this resource.
+
+bucket.name=Bucket
+bucket.desc=The S3 bucket you want to access resources on.
+
+filePath.name=Path
+filePath.desc=The path within the bucket.
