--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -9,6 +9,12 @@ uploadFiles.name=Upload File
 localFolder.name=Local Folder
 localFolder.names=Local Folders
 
+sftpFolder.name=SFTP Folder
+sftpFolder.names=SFTP Folders
+
+windowsFolder.name=Windows Share
+windowsFolder.names=Windows Shares
+
 create.name=Mount
 
 name.name=Name
@@ -19,7 +25,6 @@ home.desc=This is the home mount for this tenant
 
 destinationUri.name=Path
 destinationUri.desc=The path of the file.
-
 
 shortCode.name=Short Code
 shortCode.desc=A unique code for anonymously identifying this folder
@@ -33,15 +38,14 @@ options.desc=The options available for this folder
 mountPath.name=Mount Path
 mountPath.desc=The path on which this folder is mounted within the virtual file system.
 
+remotePath.name=Remote Path
+remotePath.desc=The path of the remote folder for this resource.
+
 cacheStrategy.name=Cache Strategy
 cacheStrategy.desc=The cache strategy to use for this mount
 
 credentials.name=Credentials
 credentials.desc=The credentials to use to access this folder
-
-windowsFolder.name=Windows Share
-localFolder.name=Local Folder
-sftpFolder.name=SFTP
 
 flat.name=Current Directory Only
 maximum.name=Unlimited Recursive Search
