Move breadcrumb to just above table.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -23,6 +23,9 @@ name.desc=The name to identify this mount when using this system.
 home.name=Home
 home.desc=This is the home mount for this tenant
 
+appendUsername.name=Append Username
+appendUsername.desc=Create a separate space for each unique user in this folder.
+
 destinationUri.name=Path
 destinationUri.desc=The path of the file.
 
