Added setup complete page. Fixed various issues and i18n in wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -41,6 +41,9 @@ options.desc=The options available for this folder
 mountPath.name=Mount Path
 mountPath.desc=The path on which this folder is mounted within the virtual file system.
 
+localPath.name=Local Path
+localPath.desc=The path to the local folder.
+
 remotePath.name=Remote Path
 remotePath.desc=The path of the remote folder for this resource.
 
