--- a/jadaptive-virtual-sftp/src/main/resources/i18n/selectMount.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/selectMount.properties
@@ -2,7 +2,7 @@ selectMount.summary=Select the type of file system where you want to host the de
 selectMount.setup.name=Home Folder
 
 review.homeMount.header=Default Home
-review.homeMount.desc=The default home folder for all users. If required, this can be overridden for any user with further configuration.
+review.homeMount.desc=The default home folder for all users will be configured as:
 type.name=Type
 path.name=Path
-acheStrategy.name=Cache Strategy
+cacheStrategy.name=Cache Strategy
