Public upload wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -83,3 +83,5 @@ port.name=Port
 port.desc=The port of the file server.
 
 port.invalid=The port number should be between 1 and 65535.
+
+create.public.upload=a public URL to receive files over the web
