Finalize VFS version. Mount home folder to /home.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vendor.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vendor.properties
@@ -1,6 +1,6 @@
 # It is intended that this file is generated during build time
 product.name=Virtual SFTP 
-product.version=DEV_VERSION
+product.version=0.1.0
 product.copyright=\u00a9 2003-2021 JADAPTIVE Limited. All Rights Reserved.
 
 product.setup.complete=Your Virtual SFTP server is now setup and ready to serve files! 
