Refactored public upload dashboard widget Added last modified to search listing.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -89,6 +89,7 @@ create.public.upload=a public URL to receive files over the web
 configureFiles.name=Configure File System
 browseFiles.name=Browse Files
 
+publicUpload.name=Public Upload Folders
 publicUpload.complete=The public upload folder has been created and is now live at the following url:
 
 publicUpload.user.name=Your Name
@@ -97,6 +98,5 @@ publicUpload.user.desc=Please enter your name so we know whom the file is from.
 publicUpload.email.name=Your Email
 publicUpload.email.desc=Please enter your email so that we can contact you if required.
 
-publicUpload.dashboard=Public Upload Folders
 no.publicFolders=There are no folders currently accessible to the public.
 publicFolders.text=You have the following folders available to the public...
