Support for public download links.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -30,7 +30,7 @@ destinationUri.name=Path
 destinationUri.desc=The path of the file.
 
 shortCode.name=Short Code
-shortCode.desc=A unique code for anonymously identifying this folder
+shortCode.desc=A unique code for anonymously identifying this file or folder.
 
 type.name=Mount Type
 type.desc=The type of mount
@@ -100,3 +100,4 @@ publicUpload.email.desc=Please enter your email so that we can contact you if re
 
 no.publicFolders=There are no folders currently accessible to the public.
 publicFolders.text=You have the following folders available to the public...
+
