Missing i18n Encode public and direct links correctly.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicDownload.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicDownload.properties
@@ -12,3 +12,6 @@ download.instructions=Click on the download button to initiate your download. Al
 notfound.text=File Not Found!
 notfound.instructions=The file you requested could not be found. This could either be because the file does not exist any more, that you don't have permission \
 to download the file or you typed the URL incorrectly.
+
+filename.name=File Name
+filename.desc=The file name of the file being downloaded.
