--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -18,3 +18,6 @@ bucket.desc=The S3 bucket you want to access resources on.
 
 filePath.name=Path
 filePath.desc=The path within the bucket.
+
+virtualFolder.names=Virtual Folders
+virtualFolder.name=Virtual Folder
