Initial implementation of events and audit log.

--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -11,7 +11,7 @@ accessKey.name=Access Key
 accessKey.desc=The AWS access key for accessing this resource.
 
 secretKey.name=Secret Key
-secretKey.desc=The SAWS secret key for accessing this resource.
+secretKey.desc=The AWS secret key for accessing this resource.
 
 bucket.name=Bucket
 bucket.desc=The S3 bucket you want to access resources on.
