--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -101,3 +101,23 @@ publicUpload.email.desc=Please enter your email so that we can contact you if re
 no.publicFolders=There are no folders currently accessible to the public.
 publicFolders.text=You have the following folders available to the public...
 
+filename.name=Filename
+filename.desc=The name of the file transfered.
+
+path.name=Virtual Path
+path.desc=The path of the file within the Virtual File System
+
+started.name=Started
+started.desc=The timestamp of when the transfer was started.
+
+ended.name=Ended
+ended.desc=The timestamp of when the transfer ended.
+
+contentHash.name=Content Hash
+contentHash.desc=The hash of the data transferred through the system.
+
+humanHash.name=Human Hash
+humanHash.desc=A human readable representation of the hash.
+
+size.name=File Size
+size.desc=The number of bytes transfered.
