Reset virtual file cache on specific events.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -15,6 +15,7 @@ sftpFolder.names=SFTP Folders
 windowsFolder.name=Windows Share
 windowsFolder.names=Windows Shares
 
+files=File System
 create.name=Mount
 
 name.name=Name
