Introduction of product service.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -16,6 +16,10 @@ windowsFolder.name=Windows Share
 windowsFolder.names=Windows Shares
 
 files=File System
+
+fileDownloadEvent=Download File
+fileUploadEvent=Upload File
+
 create.name=Mount
 
 name.name=Name
