--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -1,5 +1,5 @@
-publicDownload.names=Public Downloads
-publicDownload.name=Public Download
+sharedFiles.names=Shared Files
+sharedFiles.name=Shared File
 
 virtualPath.name=Virtual Path
 virtualPath.desc=The path to the file or folder in the virtual file system.
