--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -94,14 +94,20 @@ create.public.upload=a public URL to receive files over the web
 configureFiles.name=Configure File System
 browseFiles.name=Browse Files
 
-publicUpload.name=Public Upload Folders
-publicUpload.complete=The public upload folder has been created and is now live at the following url:
+email.name=Email
+email.desc=The user's email address
 
-publicUpload.user.name=Your Name
-publicUpload.user.desc=Please enter your name so we know whom the file is from.
+incomingFiles.names=Incoming Files
+incomingFiles.name=Incoming File
 
-publicUpload.email.name=Your Email
-publicUpload.email.desc=Please enter your email so that we can contact you if required.
+publicUpload.name=Incoming Files
+publicUpload.complete=The public folder has been created and is now live at the following url:
+
+user.name=Your Name
+user.desc=Please enter your name so we know whom the file is from.
+
+email.name=Your Email
+email.desc=Please enter your email so that we can contact you if required.
 
 no.publicFolders=There are no folders currently accessible to the public.
 publicFolders.text=You have the following folders available to the public...
@@ -126,3 +132,21 @@ humanHash.desc=A human readable representation of the hash.
 
 size.name=File Size
 size.desc=The number of bytes transfered.
+
+uploadPaths.name=Files
+uploadPaths.desc=The files uploaded.
+
+reference.name=Reference
+reference.desc=If you have a reference for this upload provide it here.
+
+uploadArea.name=Folder
+uploadArea.desc=The name of the upload folder where the files were uploaded.
+
+upload.name=Upload
+
+latestFiles.text=Latest Uploads
+no.incomingFiles=You have no recent uploads
+
+files.name=Files
+virtualPath.name=Path
+virtualPaht.desc=The path to this file in the virtual file system.
