Fixed some fields.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -15,3 +15,5 @@ to download the file or you typed the URL incorrectly.
 
 filename.name=File Name
 filename.desc=The file name of the file being downloaded.
+
+agree.text=I agree to the terms and conditions above.
