Fixed a bunch of bugs. Implemented password protected shares, and T&Cs

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -17,3 +17,18 @@ filename.name=File Name
 filename.desc=The file name of the file being downloaded.
 
 agree.text=I agree to the terms and conditions above.
+
+passwordProtected.name=Password Protected
+passwordProtected.desc=Anyone downloading this file will need to supply the password provided here.
+
+files.name=Share
+options.name=Options
+
+acceptTerms.name=Terms Acceptance Required
+acceptTerms.desc=The user must agree to the terms &amp; conditions before downloading the file. 
+
+passwordProtected.text=Password Protected File Share
+invalidCredentials.text=Invalid credentials.
+password.name=Share Password
+password.desc=Enter the password shared with you to download this file.
+
