Added support for server side feedback and arguments in i18n markup in HTML. Added upload complete page.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -150,3 +150,13 @@ no.incomingFiles=You have no recent uploads
 files.name=Files
 virtualPath.name=Path
 virtualPaht.desc=The path to this file in the virtual file system.
+
+uploadComplete.title=Upload Complete
+uploadComplete.header=Upload Comlete
+uploadComplete.text=Thank You
+uploadComplete.msg=We have received your files. We will contact you through our usual channels if we need to follow up with this submission.
+
+uploadMoreFiles.text=Upload More
+
+incomingFile.delete.error=The incoming files could not be deleted! {0}
+incomingFile.delete.success=The files have been deleted for incoming file reference {0}.
