Refactor of file factory use. Can now create new object and pass some field values to it.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -21,8 +21,12 @@ agree.text=I agree to the terms and conditions above.
 passwordProtected.name=Password Protected
 passwordProtected.desc=Anyone downloading this file will need to supply the password provided here.
 
-files.name=Share
+file.name=Share
+create.name=Create
 options.name=Options
+
+terms.name=Terms &amp; Conditions
+terms.desc=When required, show these terms &amp; conditions prior to the user downloading the file.
 
 acceptTerms.name=Terms Acceptance Required
 acceptTerms.desc=The user must agree to the terms &amp; conditions before downloading the file. 
