WIP of sharing refactor.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -109,8 +109,8 @@ user.desc=Please enter your name so we know whom the file is from.
 email.name=Your Email
 email.desc=Please enter your email so that we can contact you if required.
 
-no.publicFolders=There are no folders currently accessible to the public.
-publicFolders.text=You have the following folders available to the public...
+no.publicFolders=There are no shared folders.
+publicFolders.text=You have the following shared folders available for uploads...
 
 filename.name=Filename
 filename.desc=The name of the file transfered.
@@ -160,3 +160,12 @@ uploadMoreFiles.text=Upload More
 
 incomingFile.delete.error=The incoming files could not be deleted! {0}
 incomingFile.delete.success=The files have been deleted for incoming file reference {0}.
+
+permissionsView.name=Permissions
+advancedView.name=Advanced
+
+shareable.name=Shareable
+shareable.desc=Users assigned to this folder can share it's contents with external users.
+
+readOnly.name=Read Only
+readOnly.desc=This folder is restricted to read operations.
