New assignments page on public upload wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -12,7 +12,13 @@ selectName.desc=Provide a unique name for this public upload area.
 name.name=Name
 name.desc=Provide a name for the upload area avoiding words such as "public". Perhaps use a customer or partners name if the area is specific to a particular entity.
 name.invalid=The name field can only contain alpha-numeric, underscore, hyphen and the space character and is limited to a length of 64 characters in total.
+
+virtualPath.name=Mount Path
+virtualPath.desc=All virtual folders are mounted somewhere within the virtual file system. If you are unsure about this leave the default value /public so that the upload folder is mounted at /public/<name>.
+virtualPath.invalid=The virtual path can only contain alpha-numeric, underscore, hyphen and forward slash characters.
+
 publicUploadStep2.setup.name=Create Mount
+
 selectMount.summary=Set the location of the public upload folder. All files received by this public upload URL will be placed in the folder configured here.
 
 review.homeMount.header=Public Mount
