Lots of work on sharing.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -26,3 +26,16 @@ review.homeMount.desc=A mount will be created to host the public uploads for thi
 
 review.name.header=Name
 review.name.desc=The name to identify this public upload area. For internal access via the virtual file system a mount will be created with this name under the standard /public path.
+
+publicUploadStep3.setup.name=Assign Users
+
+selectAssignments.desc=Select the users you want to have access to these files.
+roles.name=Roles
+roles.desc=Users in these Roles will have access to this folder.
+
+users.name=Users
+users.desc=The users you add here will have access to this folder.
+
+review.assignment.header=User Assignments
+review.assignment.desc=The Users and Roles listed here will have access to this folder.
+
