--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -36,3 +36,5 @@ invalidCredentials.text=Invalid credentials.
 password.name=Share Password
 password.desc=Enter the password shared with you to download this file.
 
+shareType.name=Share Type
+shareType.desc=The type of share
