--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -164,8 +164,11 @@ incomingFile.delete.success=The files have been deleted for incoming file refere
 permissionsView.name=Permissions
 advancedView.name=Advanced
 
-shareable.name=Shareable
-shareable.desc=Users assigned to this folder can share it's contents with external users.
+shareFiles.name=Share Files
+shareFiles.desc=Users assigned to this folder can share file within it with external users.
+
+shareFolders.name=Share Folders
+shareFolders.desc=Users assigned to this folder can share any folders within it with external users.
 
 readOnly.name=Read Only
 readOnly.desc=This folder is restricted to read operations.
