Better support for partial mount files and getting the right permissions shown.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -14,7 +14,7 @@ name.desc=Provide a name for the upload area avoiding words such as "public". Pe
 name.invalid=The name field can only contain alpha-numeric, underscore, hyphen and the space character and is limited to a length of 64 characters in total.
 
 virtualPath.name=Mount Path
-virtualPath.desc=All virtual folders are mounted somewhere within the virtual file system. If you are unsure about this leave the default value /public so that the upload folder is mounted at /public/<name>.
+virtualPath.desc=All virtual folders are mounted somewhere within the virtual file system. If you are unsure about this leave the default value /public so that the upload folder is mounted at /public/&lt;name&gt;.
 virtualPath.invalid=The virtual path can only contain alpha-numeric, underscore, hyphen and forward slash characters.
 
 publicUploadStep2.setup.name=Create Mount
