i18n fixes for setup wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/selectMount.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/selectMount.properties
@@ -6,3 +6,6 @@ review.homeMount.desc=The default home folder for all users will be configured a
 type.name=Type
 path.name=Path
 cacheStrategy.name=Cache Strategy
+
+homeCredentials.summary=Mount Credentials
+homeCredentials.setup.name=Set Credentials
