--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -46,6 +46,9 @@ options.desc=The options available for this folder
 mountPath.name=Mount Path
 mountPath.desc=The path on which this folder is mounted within the virtual file system.
 
+createRoot.name=Create
+createRoot.desc=Create the root folder if it does not exist.
+
 localPath.name=Local Path
 localPath.desc=The path to the local folder.
 
