Fixed a number of file sharing issues.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -31,6 +31,9 @@ terms.desc=When required, show these terms &amp; conditions prior to the user do
 acceptTerms.name=Terms Acceptance Required
 acceptTerms.desc=The user must agree to the terms &amp; conditions before downloading the file. 
 
+acceptTerms.text=Terms &amp; Conditions
+acceptTerms.info=You must accept the following terms and conditions before downloading the file. 
+
 passwordProtected.text=Password Protected File Share
 invalidCredentials.text=Invalid credentials.
 password.name=Share Password
