Support in FileScheme for bundle. Fixes for upload areas.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -29,6 +29,8 @@ review.name.desc=The name to identify this public upload area. For internal acce
 
 publicUploadStep3.setup.name=Assign Users
 
+homeCredentials.setup.name=Credentials
+
 selectAssignments.desc=Select the users you want to have access to these files.
 roles.name=Roles
 roles.desc=Users in these Roles will have access to this folder.
