Major refactor of users, split uploads from SharedFile into UploadForm entity. HTML and message templates in a working state.

--- a/jadaptive-virtual-sftp-gcs/src/main/resources/i18n/googleFolder.properties
+++ b/jadaptive-virtual-sftp-gcs/src/main/resources/i18n/googleFolder.properties
@@ -1,6 +1,8 @@
 googleFolder.name=Google Cloud Storage
 googleFolder.names=Google Cloud Storage
 
+virtualFolder.names=Virtual Folders
+
 name.name=Name
 name.desc=The name to identify this mount when using this system.
 
