--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -41,3 +41,12 @@ password.desc=Enter the password shared with you to download this file.
 
 shareType.name=Share Type
 shareType.desc=The type of share
+
+notifications.name=Notifications
+
+notifyAssignedUsers.name=Notify Assignments
+notifyAssignedUsers.desc=Notification preference for users and roles assigned to a shared resource.
+
+otherEmails.name=Other Email
+otherEmails.desc=Always notify these additional email addresses when sharing events occur. 
+
