Tested working Azure container plugin.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -42,6 +42,12 @@ password.desc=Enter the password shared with you to download this file.
 shareType.name=Share Type
 shareType.desc=The type of share
 
+sharedBy.name=Shared By
+sharedBy.desc=The user that created this share.
+
+notifySharer.name=Notify Sharer
+notifySharer.desc=Email the sharer when this share is accessed.
+
 notifications.name=Notifications
 
 notifyAssignedUsers.name=Notify Assignments
