--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vfsConfiguration.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vfsConfiguration.properties
@@ -1,6 +1,10 @@
 vfsConfiguration.name=VFS Configuration
 
 general.name=General
+sharing.name=Sharing
+
+notificationEmails.name=Notification Email
+notificationEmails.desc=Email addresses that should receive copies of all sharing events. This includes when shares are created, and files are received or accessed.
 
 defaultHash.name=Default Hash
 defaultHash.desc=The default hash type used when reporting content hashes.
