--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -17,8 +17,22 @@ windowsFolder.names=Windows Shares
 
 files=File System
 
+fileDownloadEvent.names=Downloaded Files
 fileDownloadEvent=Download File
+
+fileUploadEvent.names=Uploaded Files
 fileUploadEvent=Upload File
+
+fileDeletedEvent.names=Deleted Files
+fileDeletedEvent=Deleted File
+
+folderCreatedEvent.names=Created Folders
+folderCreatedEvent=Created Folder
+
+shareDownloadEvent.names=Share Downloads
+shareDownloadEvent=Share Download
+
+fileOperation=File Operation
 
 create.name=Mount
 
@@ -175,3 +189,5 @@ shareFolders.desc=Users assigned to this folder can share any folders within it 
 
 readOnly.name=Read Only
 readOnly.desc=This folder is restricted to read operations.
+
+transferResult=File Transfer
