Refactor of wizards.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -41,3 +41,17 @@ users.desc=The users you add here will have access to this folder.
 review.assignment.header=User Assignments
 review.assignment.desc=The Users and Roles listed here will have access to this folder.
 
+publicUploadStep4.setup.name=Additional Options
+options.desc=Configure the options of the upload form.
+
+shortCode.name=Shortcode
+shortCode.desc=A unique shortcode identifies the upload form in the shared URL. You can choose to provide a value here if you want or accept the randomly generated value.
+
+notifyAssignedUsers.name=Notification Preference
+notifyAssignedUsers.desc=When a user uploads files to this form an email will be sent to the assigned users to let them know new files have arrived. You can configure that behaviour here by specifying what users, if any receive those notifications.
+
+otherEmails.name=Other Emails
+otherEmails.desc=A list of other email addresses that should receive the email notifications.
+
+review.options.header=Additional Options
+review.options.desc=You have chosen these additional options.
