Made IncomingFile assignable and assigned VirtualFolder assignments to it upon creation. Refactored dashboard widgets, added virtual folder widget for non-admin users.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -127,7 +127,7 @@ email.name=Your Email
 email.desc=Please enter your email so that we can contact you if required.
 
 no.publicFolders=There are no shared folders.
-publicFolders.text=You have the following shared folders available for uploads...
+publicFolders.text=You have the following upload forms available...
 
 filename.name=Filename
 filename.desc=The name of the file transfered.
@@ -162,7 +162,7 @@ uploadArea.desc=The name of the upload folder where the files were uploaded.
 upload.name=Upload
 
 latestFiles.text=Latest Uploads
-no.incomingFiles=You have no recent uploads
+no.incomingFiles=You have not received any files recently.
 
 files.name=Files
 virtualPath.name=Path
@@ -191,3 +191,6 @@ readOnly.name=Read Only
 readOnly.desc=This folder is restricted to read operations.
 
 transferResult=File Transfer
+
+folders.name=Folders
+folders.desc=You have access to the following folders.
