--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vfsConfiguration.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vfsConfiguration.properties
@@ -1,5 +1,5 @@
 vfsConfiguration.name=VFS Configuration
-
+vfsConfiguration.desc=Virtual file system and file sharing configuration.
 general.name=General
 sharing.name=Sharing
 
