Refactor of file schemes for easier disabling when scheme is not required or allowed.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -6,15 +6,6 @@ virtualFolder.names=Virtual Folders
 uploadFiles.names=Upload Files
 uploadFiles.name=Upload File
 
-localFolder.name=Local Folder
-localFolder.names=Local Folders
-
-sftpFolder.name=SFTP Folder
-sftpFolder.names=SFTP Folders
-
-windowsFolder.name=Windows Share
-windowsFolder.names=Windows Shares
-
 files=File System
 
 fileDownloadEvent.names=Downloaded Files
@@ -63,11 +54,8 @@ mountPath.desc=The path on which this folder is mounted within the virtual file 
 createRoot.name=Create
 createRoot.desc=Create the root folder if it does not exist.
 
-localPath.name=Local Path
-localPath.desc=The path to the local folder.
-
-remotePath.name=Remote Path
-remotePath.desc=The path of the remote folder for this resource.
+localPath.name=Path
+localPath.desc=The path to the folder resource.
 
 cacheStrategy.name=Cache Strategy
 cacheStrategy.desc=The cache strategy to use for this mount
@@ -81,30 +69,15 @@ maximum.name=Unlimited Recursive Search
 folderView.name=Folder
 credsView.name=Credentials
 
-domain.name=Domain
-domain.desc=The domain of the user.
-
 username.name=Username
 username.desc=The username required to access this resource.
 
 password.name=Password
 password.desc=The password required to access this resource.
 
-privateKey.name=Private Key
-privateKey.desc=The private key for SSH key authentication.
-
-passphrase.name=Passphrase
-passphrase.desc=The passphrase for the private key.
-
 browseFiles.name=Browse Files
 
-hostname.name=Hostname
-hostname.desc=The hostname of the file server.
 
-port.name=Port
-port.desc=The port of the file server.
-
-port.invalid=The port number should be between 1 and 65535.
 
 create.public.upload=a public URL to receive files over the web
 
