Refactor to support transactions and Mongo 4. Adding choose file system section to wizard.

--- a/jadaptive-virtual-sftp-sftp/src/main/resources/i18n/sftpFolder.properties
+++ b/jadaptive-virtual-sftp-sftp/src/main/resources/i18n/sftpFolder.properties
@@ -12,6 +12,9 @@ sftpFolder.names=SFTP Folders
 hostname.name=Hostname
 hostname.desc=The hostname of the file server.
 
+remotePath.name=Remote Path
+remotePath.desc=The path to mount on the remote server.
+
 port.name=Port
 port.desc=The port of the file server.
 
