--- a/jadaptive-virtual-sftp/src/main/resources/i18n/createMount.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/createMount.properties
@@ -1,5 +1,5 @@
-selectMount.summary=Select the type of file system where you want to host the default home folder for users.
-selectMount.setup.name=Home Folder
+createMount.summary=Select the type of file system where you want to host the default home folder for users.
+createMount.setup.name=Home Folder
 
 review.homeMount.header=Default Home
 review.homeMount.desc=The default home folder for all users will be configured as:
