Changed share folder strategy to root storage.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
@@ -4,8 +4,8 @@ chooseFilesystem.summary=There are several different ways that I can set up the 
 choice1.header=Home Folders
 choice1.paragraph=Multiple users will use the file system, all of which require their home directory to be separated and removed from other users' folders. Users will not be able to access other users' home directories. 
 
-choice2.header=Shared Home
-choice2.paragraph=You do not want to use home folders. Either because you do not intend on supporting multiple users or that users you provide access to will share the same root folder when they log into the service.
+choice2.header=Root Storage
+choice2.paragraph=You do not want to use home folders. You will configure the storage for the root of the file system, which will be shared across all users.
 
 choice3.header=Setup Later
 choice3.paragraph=Just create a read-only root file system. You will reconfigure the file system after I've poked around a little. 
