Improvements in file schemes and wizards.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -56,3 +56,6 @@ notifyAssignedUsers.desc=Notification preference for users and roles assigned to
 otherEmails.name=Other Email
 otherEmails.desc=Always notify these additional email addresses when sharing events occur. 
 
+notfound.text=File Not Found
+notfound.instructions=The file that was shared with you is no longer available. Contact the user that shared the \
+file with you to get a new link to the file.
