--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -167,3 +167,6 @@ transferResult=File Transfer
 
 folders.name=Folders
 folders.desc=You have access to the following folders.
+
+dataTransfer.name=30-Day Combined Throughput
+dataTransfer2.name=Monthly Ingress/Egress by Protocol
