Added features for sharing and upload forms

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
@@ -11,7 +11,7 @@ choice3.header=Setup Later
 choice3.paragraph=Just create a read-only root file system. You will reconfigure the file system after I've poked around a little. 
 
 review.chooseFilesystem.header=File System Setup
-review.chooseFilesystem.desc=You have chosen the following setup for the virtual file system.
+review.chooseFilesystem.desc=You have chosen the following setup for the virtual file system:
 
 choice1.review=Home Folders
 choice2.review=Shared Home
