Made charts 30 day not monthly so stats don't just drop off on 1st of month.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -169,4 +169,4 @@ folders.name=Folders
 folders.desc=You have access to the following folders.
 
 dataTransfer.name=30-Day Combined Transfers
-dataTransfer2.name=Monthly Transfer by Protocol
+dataTransfer2.name=30-Day Transfer by Protocol
