A bunch of bugs and PGP encryption.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
@@ -8,7 +8,7 @@ choice2.header=Root Storage
 choice2.paragraph=You do not want to use home folders. You will configure the storage for the root of the file system, which will be shared across all users.
 
 choice3.header=Setup Later
-choice3.paragraph=Just create a read-only root file system. You will reconfigure the file system after I've poked around a little. 
+choice3.paragraph=Just create a read-only root file system. You will reconfigure the file system after you have poked around a little. 
 
 review.chooseFilesystem.header=File System Setup
 review.chooseFilesystem.desc=You have chosen the following setup for the virtual file system:
