--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -153,6 +153,29 @@ incomingFile.delete.success=The files have been deleted for incoming file refere
 
 permissionsView.name=Permissions
 advancedView.name=Advanced
+encryptionView.name=PGP Encryption
+keysView.name=PGP Keys
+
+encrypt.name=Encrypt Files
+encrypt.desc=Automatically PGP encrypt files as they are written to this folder, and automatically decrypt when being accessed.
+
+armour.name=Armour
+armour.desc=Encodes the file in a text format for easy use in text based applications.
+
+compress.name=Compress Files
+compress.desc=Compress the data in the encrypted file.
+
+integrityCheck.name=Check Integrity
+integrityCheck.desc=Adds an integrity packet to the encrypted file.
+
+privateKey.name=PGP Private Key
+privateKey.desc=A PGP Private Key to use for decryption.
+
+passphrase.name=Passphrase
+passphrase.desc=The passphrase of the PGP Private Key.
+
+publicKey.name=PGP Public Key
+publicKey.desc=The PGP Public Key to use for encryption.
 
 shareFiles.name=Share Files
 shareFiles.desc=Users assigned to this folder can share file within it with external users.
